--- a/style.css
+++ b/style.css
@@ -1,15 +1,63 @@
+:root{
+  --primary-color: #221d23;
+  --secondary-color: #FBFBFF;
+  --accent-color: #01BAEF;
+
+
+}
 * {
   box-sizing: border-box;
+}
+body {
+  margin: 0;
+  background-color: var(--primary-color);
+  font-family: "Source Sans 3", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 table,
 caption {
   border: 1px solid black;
 }
 table {
+  background-color: var(--secondary-color);
   border-top: none;
   margin: 10px;
   padding: 20px;
   width: 400px;
+}
+.nav {
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: var(--secondary-color);
+}
+.nav a{
+  padding: 10px 20px;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 1.2em;
+  color: var(--primary-color);
+}
+.nav a:hover{
+  background-color: var(--accent-color);
+  color: var(--secondary-color)
+}
+
+h1{
+  padding: 0 40px;
+  text-align: center;
+  color: var(--secondary-color);
+  font-size: 10em;
+  font-family: "BBH Sans Bogle", sans-serif;
+  font-style: normal;
+  font-weight: 100;
+}
+span{
+  color: var(--accent-color);
 }
 caption {
   border-bottom: none;
@@ -17,17 +65,18 @@ caption {
   font-size: 1.2em;
   font-weight: bold;
   text-transform: uppercase;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "BBH Sans Bogle", sans-serif;
+  font-weight: 100;
 }
-img {
+.team-logo {
   width: 50%;
   display: block;
   margin: 0 auto 15px auto;
 }
 
 th,
-td{
-    vertical-align: top;
+td {
+  vertical-align: top;
 }
 
 th {
