--- a/style.css
+++ b/style.css
@@ -59,6 +59,11 @@ h1{
 span{
   color: var(--accent-color);
 }
+.main-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 caption {
   border-bottom: none;
   padding: 10px;
