--- a/style.css
+++ b/style.css
@@ -45,31 +45,37 @@ a:hover{
   background-color: var(--accent-color);
   color: var(--secondary-color)
 }
-
-h1{
-  padding: 0 40px;
-  text-align: center;
-  color: var(--secondary-color);
-  font-size: 10em;
-}
-h1, 
+h1,
+h2, 
 h3{
   font-family: "Bebas Neue", sans-serif;
   font-weight:900;
   font-style: normal;
 }
-span{
-  color: var(--accent-color);
+h1,
+h2{
+  padding: 0 40px;
+  text-align: center;
+  color: var(--secondary-color);
 }
-.main-container{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+h1{
+  font-size: 10em;
+}
+h2{
+  font-size: 5em;
 }
 h3 {
   margin: 0 auto;
   font-size: 2em;
   text-transform: uppercase;
+}
+span{
+  color: var(--accent-color);
+}
+.container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .team-logo {
   height: 150px;
